--- a/labcheckin/templates/main/index.html.j2
+++ b/labcheckin/templates/main/index.html.j2
@@ -16,6 +16,20 @@
     <!-- CARD INPUT FORM -->
     <h1 style="border: 1px solid #333; border-radius: 5px; margin-top: 5px; color: #fff; background-color: #333; padding: 5px 0;" class='mx-auto text-center'>Please Swipe Card</h1>
 
+    <div class="row">
+        <div class="col-md-12">
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                <div class=flashes>
+                {% for category, message in messages %}
+                <div class="alert alert-{{ category }}" role="alert">{{ message }}</div>
+                {% endfor %}
+                </div>
+            {% endif %}
+        {% endwith %}
+        </div>
+    </div>
+
     <!-- MAIN -->
     <div class="row">
 
@@ -117,6 +131,14 @@
     const HEIGHT = 1675
     
     const current_swipe_numbers = {{ current_swipe_numbers }}
+
+    // show alerts for 5 seconds
+    setTimeout(() => {
+        const alerts = document.querySelectorAll(".alert").forEach(alert => {
+            alert.remove()
+        })
+        
+    }, 5000);
 </script>
 
 <script src="{{ url_for('static', filename='js/main.js') }}"></script>
