Fixed crash when no seat type is selected

--- a/labcheckin/templates/main/index.html.j2
+++ b/labcheckin/templates/main/index.html.j2
@@ -119,7 +119,7 @@
                 <form action="/create_transaction" method="POST">
                     <input type="text" name="swipe_number" id="swipe_number" hidden>
                     <div class="modal-body">
-                        <div class="btn-group-toggle" data-toggle="buttons" id="buttons">
+                        <div class="btn-group-toggle" data-toggle="buttons" id="buttons" required>
                             ...
                         </div>
                     </div>
